# shawty

./: shawty.cabal  stack.yaml
.stack-work/install/b70b48a6/flag-cache/: BoundedChan-1.0.3.0-b907b6ba6ef099d54f34c346b2f1e58e  base64-bytestring-1.0.0.1-194c4f6530ad39b4e23a8a4ae4cfb8fb  bytestring-lexing-0.5.0.2-9b0ce2da5f43d55db9cebafafcb46159  cookie-0.4.2.1-241510077af558c94d0262bfb5cb60ab  data-default-class-0.0.1-fcbab95490d730dd2489b628499587cd  easy-file-0.2.1-436448ab86552cffea5db316920b12f6  fast-logger-2.4.6-6d5051683052cec273d44bd17d95ae5b  hedis-0.6.10-64d1a9b20a78d4a358e1f69d4cdc8c67  nats-1.1.1-8aa4073730c676dbe210ea8bffd8d092  network-uri-2.6.1.0-76fab9674c5907820faa96e821c66e29  regex-base-0.93.2-4c48df78ee67e9e195e44f458cb9f965  regex-compat-0.95.1-3828adea3bac1b2b9b43fd5abbabd6fd  regex-posix-0.95.2-39ee1cce5112ef6c5a6f5c75687491aa  resource-pool-0.2.3.2-7eeea95d5bec6c39ec91ae503bccd6e0  scotty-0.11.0-b78eb7aaf111bdd038b0e2739192c28b  shawty-0.1.0.0  shawty-0.1.0.0-b7560098ed4ec12460f377ec2d6d9051  stringsearch-0.3.6.6-d71a215d481a2fce6b362e6a2a89fd7a  wai-extra-3.0.17-c6ffaee6054a183ff24a93b22ba787e4  wai-logger-2.2.7-25809aaa32e7168e68fc5faf0e8bef87
src/: Main.hs
